--- a/packages/bolt-toolkit-ui/components/components-button/button.twig
+++ b/packages/bolt-toolkit-ui/components/components-button/button.twig
@@ -21,11 +21,25 @@
     </a>
     <a href="" class="c-test-button c-test-button--secondary">
       <span class="c-test-button__text">{{ button.text }}</span>
-      <svg id="search" viewBox="0 0 26 28" width="1em" height="1em"><path d="M18 13c0-3.859-3.141-7-7-7s-7 3.141-7 7 3.141 7 7 7 7-3.141 7-7zm8 13c0 1.094-.906 2-2 2a1.96 1.96 0 0 1-1.406-.594l-5.359-5.344a10.971 10.971 0 0 1-6.234 1.937c-6.078 0-11-4.922-11-11s4.922-11 11-11 11 4.922 11 11c0 2.219-.672 4.406-1.937 6.234l5.359 5.359c.359.359.578.875.578 1.406z"></path></svg>
     </a>
     <a href="" class="c-test-button c-test-button--tertiary">
       <span class="c-test-button__text">{{ button.text }}</span>
       <svg id="search" viewBox="0 0 26 28" width="1em" height="1em"><path d="M18 13c0-3.859-3.141-7-7-7s-7 3.141-7 7 3.141 7 7 7 7-3.141 7-7zm8 13c0 1.094-.906 2-2 2a1.96 1.96 0 0 1-1.406-.594l-5.359-5.344a10.971 10.971 0 0 1-6.234 1.937c-6.078 0-11-4.922-11-11s4.922-11 11-11 11 4.922 11 11c0 2.219-.672 4.406-1.937 6.234l5.359 5.359c.359.359.578.875.578 1.406z"></path></svg>
+    </a>
+  </div>
+  <h5>Button validation</h5>
+  <div class="c-test-button-group">
+    <a href="" class="c-test-button c-test-button--success">
+      <span class="c-test-button__text">Success</span>
+    </a>
+    <a href="" class="c-test-button c-test-button--warning">
+      <span class="c-test-button__text">Warning</span>
+    </a>
+    <a href="" class="c-test-button c-test-button--error">
+      <span class="c-test-button__text">Error</span>
+    </a>
+    <a href="" class="c-test-button c-test-button--disabled">
+      <span class="c-test-button__text">Disabled</span>
     </a>
   </div>
   <h5>Button sizes</h5>
