WIP: headline styles

--- a/packages/bolt-toolkit-ui/components/components-headline/_components.headline.scss
+++ b/packages/bolt-toolkit-ui/components/components-headline/_components.headline.scss
@@ -1,11 +1,6 @@
 /* ------------------------------------ *\
    Headlines
 \* ------------------------------------ */
-@import '@bolt/settings-global';
-@import '@bolt/tools-font-family';
-@import '@bolt/tools-font-size';
-@import '@bolt/tools-font-weight';
-@import '@bolt/tools-spacing';
 
 
 .c-bolt-headline {
@@ -14,34 +9,46 @@
 }
 
 .c-bolt-headline--xxxlarge {
+  /*@include bolt-padding-top(0);*/
+  /*@include bolt-padding-bottom($bolt-spacing-leading * 0.17 + rem);*/
   @include bolt-font-size(xxxlarge);
 
   letter-spacing: -0.2rem;
 }
 
 .c-bolt-headline--xxlarge {
+  /*@include bolt-padding-top($bolt-spacing-leading * 1.5 + rem);*/
+  /*@include bolt-padding-bottom($bolt-spacing-leading * 0.28 + rem);*/
   @include bolt-font-size(xxlarge);
 
   letter-spacing: -0.15rem;
 }
 
 .c-bolt-headline--xlarge {
+  /*@include bolt-padding-top($bolt-spacing-leading * 0.5 + rem);*/
+  /*@include bolt-padding-bottom($bolt-spacing-leading * 0.28 + rem);*/
   @include bolt-font-size(xlarge);
 
   letter-spacing: -0.1rem;
 }
 
 .c-bolt-headline--large {
+  /*@include bolt-padding-top($bolt-spacing-leading * 0.25 + rem);*/
+  /*@include bolt-padding-bottom($bolt-spacing-leading * 0.35 + rem);*/
   @include bolt-font-size(large);
 
   letter-spacing: -0.05rem;
 }
 
 .c-bolt-headline--medium {
+  /*@include bolt-padding-top($bolt-spacing-leading * 0.0625 + rem);*/
+  /*@include bolt-padding-bottom($bolt-spacing-leading * 0.35 + rem);*/
   @include bolt-font-size(medium);
 }
 
 .c-bolt-headline--small {
+  /*@include bolt-padding-top($bolt-spacing-leading * 0.0625 + rem);*/
+  /*@include bolt-padding-bottom($bolt-spacing-leading * 0.35 + rem);*/
   @include bolt-font-size(small);
 
   text-transform: uppercase;
@@ -49,6 +56,8 @@
 }
 
 .c-bolt-headline--eyebrow {
+  /*@include bolt-padding-top($bolt-spacing-leading * 0.0625 + rem);*/
+  /*@include bolt-padding-bottom($bolt-spacing-leading * 0.35 + rem);*/
   @include bolt-font-size(xsmall);
   @include bolt-font-weight(regular);
 
