--- a/packages/bolt-toolkit-ui/components/components-headline/headline.twig
+++ b/packages/bolt-toolkit-ui/components/components-headline/headline.twig
@@ -1,3 +1,6 @@
 <div class="c-bolt-headline c-bolt-headline--xxlarge">
-  XXLarge Headline
+  <span class="c-bolt-headline__text">XXLarge {{ headline.text }}</span>
+</div>
+<div class="c-bolt-headline c-bolt-headline--xlarge">
+  <span class="c-bolt-headline__text">XLarge {{ headline.text }}</span>
 </div>
