--- a/packages/website-pattern-lab/source/_meta/_00-head.twig
+++ b/packages/website-pattern-lab/source/_meta/_00-head.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="{{ htmlClass }}">
+<html class="{{ htmlClass }} js-fonts-loaded js-fonts-subset-loaded">
   <head>
     <title>{{ title }}</title>
     <meta charset="UTF-8">
