--- a/packages/bolt-toolkit-core/01-settings/settings-font-size/_settings.font-size.scss
+++ b/packages/bolt-toolkit-core/01-settings/settings-font-size/_settings.font-size.scss
@@ -9,12 +9,8 @@
 \* ------------------------------------ */
 
 
-$bolt-font-size--min: 15;
-$bolt-font-size--min-px: 15px;
-$bolt-font-size--max: 18;
-$bolt-font-size--max-px: 18px;
-
-
+$bolt-font-size--min: 15px;
+$bolt-font-size--max: 18px;
 
 
 
@@ -23,14 +19,11 @@ $bolt-font-size--max-px: 18px;
   Scale
 \* ------------------------------------ */
 
+// TODO: Create max and min for big display headline. (1)
+$bolt-font-size--xxxlarge--max: 3.083;
+$bolt-font-size--xxxlarge--min: 2.275;
 
-// $bolt-font-size--xxxlarge--min: 2.275;
-
-
-$bolt-font-size--xxlarge--max: 3.083;
-$bolt-font-size--xxlarge--min: 2.275;
-
-$bolt-font-size--xxxxlarge: 3.083;
+// These is the regular scale.
 $bolt-font-size--xxxlarge: 2.275;
 $bolt-font-size--xxlarge: 1.781;
 $bolt-font-size--xlarge: 1.417;
@@ -39,9 +32,6 @@ $bolt-font-size--medium: 1;
 $bolt-font-size--small: 0.9;
 $bolt-font-size--xsmall: 0.8;
 
-
-
-$bolt-line-height--xxxxlarge: 1.14;
 $bolt-line-height--xxxlarge: 1.14;
 $bolt-line-height--xxlarge: 1.13;
 $bolt-line-height--xlarge: 1.21;
@@ -52,11 +42,9 @@ $bolt-line-height--xsmall: 1.45;
 
 $bolt-line-height--tight: 1.111;
 
-
-
-
-
-
+// TODO: Remove these hacks once (1) is taken care of.
+$bolt-font-size--xxxxlarge: 3.083;
+$bolt-line-height--xxxxlarge: 1.14;
 
 
 /// Bolt's definition of all options of possible text sizes.
