--- a/packages/bolt-toolkit-ui/components/components-headline/headline.twig
+++ b/packages/bolt-toolkit-ui/components/components-headline/headline.twig
@@ -51,8 +51,11 @@
     <span class="c-bolt-headline__text">Eyebrow</span>
   </p>
   <h1 class="c-bolt-headline c-bolt-headline--xxxlarge">
-    <span class="c-bolt-headline__text">Some Headline</span>
+    <span class="c-bolt-headline__text">XXXLarge Headline</span>
   </h1>
+  <h2 class="c-bolt-subheadline c-bolt-subheadline--xxlarge">
+    <span class="c-bolt-subheadline__text">XXLarge Subheadline</span>
+  </h2>
   <p>
     Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere.
   </p>
