WIP: button group and individual width options

--- a/packages/bolt-toolkit-core/07-utilities/utilities-visuallyhidden/_utilities.visuallyhidden.scss
+++ b/packages/bolt-toolkit-core/07-utilities/utilities-visuallyhidden/_utilities.visuallyhidden.scss
@@ -5,5 +5,5 @@
 @import '@bolt/tools-visuallyhidden';
 
 .u-bolt-visuallyhidden {
-  @include bolt-visuallyhidden();
+  @include bolt-visuallyhidden(important);
 }
