--- a/packages/bolt-toolkit-core/02-tools/tools-visuallyhidden/_tools.visuallyhidden.scss
+++ b/packages/bolt-toolkit-core/02-tools/tools-visuallyhidden/_tools.visuallyhidden.scss
@@ -2,7 +2,7 @@
   VISUALLY HIDDEN MIXIN
 \*------------------------------------*/
 
-@mixin bolt-visuallyhidden(important){
+@mixin bolt-visuallyhidden($important: null){
   @if $important == important {
     $important: !important;
   }
