--- a/packages/bolt-toolkit-core/07-utilities/utilities-all/_utilities.all.scss
+++ b/packages/bolt-toolkit-core/07-utilities/utilities-all/_utilities.all.scss
@@ -2,4 +2,5 @@
 @import '@bolt/utilities-spacing';
 @import '@bolt/utilities-widths';
 @import '@bolt/utilities-flex';
+@import '@bolt/utilities-visuallyhidden';
 /* stylelint-enable */
