WIP: fixed button width options

--- a/packages/bolt-toolkit-ui/components/components-button/button.twig
+++ b/packages/bolt-toolkit-ui/components/components-button/button.twig
@@ -72,36 +72,45 @@
   </div>
   <h5>Button sizes</h5>
   <p>
-    <a href="" class="c-test-button c-test-button--xsmall c-test-button--stacked@bp-xsmall">
+    <a href="" class="c-test-button c-test-button--xsmall c-test-button--full-width@bp-xsmall">
       <span class="c-test-button__text">XSmall {{ button.text }}</span>
     </a>
-    <a href="" class="c-test-button c-test-button--small c-test-button--stacked@bp-xsmall">
+    <a href="" class="c-test-button c-test-button--small c-test-button--full-width@bp-xsmall">
       <span class="c-test-button__text">Small {{ button.text }}</span>
     </a>
-    <a href="" class="c-test-button c-test-button--medium c-test-button--stacked@bp-xsmall">
+    <a href="" class="c-test-button c-test-button--medium c-test-button--full-width@bp-xsmall">
       <span class="c-test-button__text">Medium {{ button.text }}</span>
     </a>
-    <a href="" class="c-test-button c-test-button--large c-test-button--stacked@bp-xsmall">
+    <a href="" class="c-test-button c-test-button--large c-test-button--full-width@bp-xsmall">
       <span class="c-test-button__text">Large {{ button.text }}</span>
     </a>
-    <a href="" class="c-test-button c-test-button--xlarge c-test-button--stacked@bp-xsmall">
+    <a href="" class="c-test-button c-test-button--xlarge c-test-button--full-width@bp-xsmall">
       <span class="c-test-button__text">XLarge {{ button.text }}</span>
     </a>
   </p>
-  <h5>Button stacked</h5>
+  <h5>Button full width</h5>
   <p>
-    <a href="" class="c-test-button c-test-button--medium c-test-button--stacked">
+    <a href="" class="c-test-button c-test-button--medium c-test-button--full-width">
       <span class="c-test-button__text">Stacked {{ button.text }}</span>
     </a>
   </p>
-  <h5>Button stacked @bp-xsmall</h5>
+  <h5>Button full width @bp-xsmall</h5>
   <p>
-    <a href="" class="c-test-button c-test-button--medium c-test-button--stacked@bp-xsmall">
+    <a href="" class="c-test-button c-test-button--medium c-test-button--full-width@bp-xsmall">
       <span class="c-test-button__text">Stacked @bp-xsmall {{ button.text }}</span>
     </a>
   </p>
   <h5>Button group</h5>
   <div class="c-test-button-group">
+    <a href="" class="c-test-button">
+      <span class="c-test-button__text">Nulla Facilisi. Duis Aliquet Egestas Purus In Blandit. Curabitur Vulputate, Ligula Lacinia Scelerisque Tempor, Lacus</span>
+    </a>
+    <a href="" class="c-test-button">
+      <span class="c-test-button__text">{{ button.text }}</span>
+    </a>
+  </div>
+  <h5>Button group stacked</h5>
+  <div class="c-test-button-group c-test-button-group--stacked">
     <a href="" class="c-test-button">
       <span class="c-test-button__text">Nulla Facilisi. Duis Aliquet Egestas Purus In Blandit. Curabitur Vulputate, Ligula Lacinia Scelerisque Tempor, Lacus</span>
     </a>
