--- a/packages/bolt-toolkit-ui/components/components-button/_components.button.scss
+++ b/packages/bolt-toolkit-ui/components/components-button/_components.button.scss
@@ -359,21 +359,13 @@ $bolt-border-width--button: 1px;
 
 // Button widths
 
-@mixin bolt-button--stacked {
+.c-test-button--full-width {
   width: 100%;
-
-  &:not(:last-child) {
-    @include bolt-margin-bottom(xsmall);
-  }
 }
 
-.c-test-button--stacked {
-  @include bolt-button--stacked;
-}
-
-.c-test-button--stacked\@bp-xsmall {
+.c-test-button--full-width\@bp-xsmall {
   @media screen and (max-width: map-get($bolt-breakpoints, xsmall)) {
-    @include bolt-button--stacked;
+    width: 100%;
   }
 }
 
@@ -418,25 +410,28 @@ $bolt-border-width--button: 1px;
   }
 }
 
-.c-test-button-group--stacked {
+@mixin bolt-button-group--stacked {
   flex-wrap: wrap;
 
   > * {
-    @include bolt-margin-left(0);
-    @include bolt-button--stacked;
+    @include bolt-margin(0, horizontal);
+
+    flex: none;
+    width: 100%;
+
+    &:not(:last-child) {
+      @include bolt-margin-bottom(xsmall);
+    }
   }
+}
+
+.c-test-button-group--stacked {
+  @include bolt-button-group--stacked;
 }
 
 .c-test-button-group--stacked\@bp-xsmall {
   @media screen and (max-width: map-get($bolt-breakpoints, xsmall)) {
-    flex-wrap: wrap;
-
-    > * {
-      @include bolt-margin-left(0);
-      @include bolt-button--stacked;
-
-      flex: none;
-    }
+    @include bolt-button-group--stacked;
   }
 }
 
