--- a/packages/bolt-toolkit-core/01-settings/settings-global/_settings.global.scss
+++ b/packages/bolt-toolkit-core/01-settings/settings-global/_settings.global.scss
@@ -8,6 +8,14 @@
    Global Settings
 \* ------------------------------------ */
 
+
+// Global Min / Max Base Font Size
+$bolt-base-font-size--min: 14px;
+$bolt-base-font-size--max: 18px;
+
+
+
+
 // Async font loading classes.
 $bolt-fonts--subset-loaded-class: 'js-fonts-subset-loaded' !default;
 $bolt-fonts--loaded-class: 'js-fonts-loaded' !default;
