--- a/packages/bolt-toolkit-ui/components/components-page-intro/_components.page-intro.scss
+++ b/packages/bolt-toolkit-ui/components/components-page-intro/_components.page-intro.scss
@@ -4,7 +4,7 @@
 @import '@bolt/tools-font-size';
 
 .c-bolt-page-intro__title {
-  @include bolt-font-size(xxxxlarge);
+  @include bolt-font-size(xxxlarge);
   @include bolt-margin-bottom(xsmall);
 }
 
