--- a/packages/bolt-toolkit-core/01-settings/settings-font-size/_settings.font-size.scss
+++ b/packages/bolt-toolkit-core/01-settings/settings-font-size/_settings.font-size.scss
@@ -2,14 +2,14 @@
 /// @group Settings: Typography
 /// @author Mike Mai
 ////
+@import '@bolt/settings-breakpoints';
+@import '@bolt/settings-global';
+@import '@bolt/tools-breakpoint';
+@import '@bolt/tools-px-to-rem';
 
 
-/* ------------------------------------ *\
-  Base Font Size
-\* ------------------------------------ */
-$bolt-font-size--min: 14px;
-$bolt-font-size--max: 18px;
-
+$bolt-font-size--small-bp: bolt-rem(bolt-breakpoint(xxsmall));
+$bolt-font-size--medium-bp: bolt-rem(bolt-breakpoint(medium));
 
 
 
@@ -17,16 +17,18 @@ $bolt-font-size--max: 18px;
   Scale
 \* ------------------------------------ */
 // TODO: Create max and min for big display headline. (1)
-$bolt-font-size--xxxlarge--max: 3.083;
-$bolt-font-size--xxxlarge--min: 2.275;
+// $bolt-font-size--xxxlarge--max: 3.083rem;
+// $bolt-font-size--xxxlarge--min: 2.275;
 // These is the regular scale.
-$bolt-font-size--xxxlarge: 2.275;
-$bolt-font-size--xxlarge: 1.781;
-$bolt-font-size--xlarge: 1.417;
-$bolt-font-size--large: 1.111;
-$bolt-font-size--medium: 1;
-$bolt-font-size--small: 0.9;
-$bolt-font-size--xsmall: 0.8;
+$bolt-font-size--xxxlarge--max: 3.083rem;
+$bolt-font-size--xxxlarge--min: 2.275rem;
+$bolt-font-size--xxlarge: 1.781rem;
+$bolt-font-size--xlarge: 1.417rem;
+$bolt-font-size--large: 1.111rem;
+$bolt-font-size--medium: 1rem;
+$bolt-font-size--small: 0.9rem;
+$bolt-font-size--xsmall: 0.8rem;
+
 
 $bolt-line-height--xxxlarge: 1.14;
 $bolt-line-height--xxlarge: 1.13;
@@ -38,7 +40,7 @@ $bolt-line-height--xsmall: 1.45;
 $bolt-line-height--tight: 1.111;
 
 // TODO: Remove these hacks once (1) is taken care of.
-$bolt-font-size--xxxxlarge: 3.083;
+
 $bolt-line-height--xxxxlarge: 1.14;
 
 
@@ -46,57 +48,53 @@ $bolt-line-height--xxxxlarge: 1.14;
 /// @type Map
 $bolt-font-sizes: (
   font-sizes: (
-    xxxxlarge: (
-      font-size: $bolt-font-size--xxxxlarge + rem,
-      line-height: (
-        regular: $bolt-line-height--xxxxlarge,
-        tight: $bolt-line-height--tight
-      ),
-    ),
     xxxlarge: (
-      font-size: $bolt-font-size--xxxlarge + rem,
+      font-size: (
+        $bolt-font-size--small-bp: $bolt-font-size--xxxlarge--min,
+        $bolt-font-size--medium-bp: $bolt-font-size--xxxlarge--max
+      ),
       line-height: (
         regular: $bolt-line-height--xxxlarge,
         tight: $bolt-line-height--tight
       ),
     ),
     xxlarge: (
-      font-size: $bolt-font-size--xxlarge + rem,
+      font-size: $bolt-font-size--xxlarge,
       line-height: (
         regular: $bolt-line-height--xxlarge,
         tight: $bolt-line-height--tight
       )
     ),
     xlarge: (
-      font-size: $bolt-font-size--xlarge + rem,
+      font-size: $bolt-font-size--xlarge,
       line-height: (
         regular: $bolt-line-height--xlarge,
         tight: $bolt-line-height--tight
       )
     ),
     large: (
-      font-size: $bolt-font-size--large + rem,
+      font-size: $bolt-font-size--large,
       line-height: (
         regular: $bolt-line-height--large,
         tight: $bolt-line-height--tight
       )
     ),
     medium: (
-      font-size: $bolt-font-size--medium + rem,
+      font-size: $bolt-font-size--medium,
       line-height: (
         regular: $bolt-line-height--medium,
         tight: $bolt-line-height--tight
       )
     ),
     small: (
-      font-size: $bolt-font-size--small + rem,
+      font-size: $bolt-font-size--small,
       line-height: (
         regular: $bolt-line-height--small,
         tight: $bolt-line-height--tight
       )
     ),
     xsmall: (
-      font-size: $bolt-font-size--xsmall + rem,
+      font-size: $bolt-font-size--xsmall,
       line-height: (
         regular: $bolt-line-height--xsmall,
         tight: $bolt-line-height--tight
