--- a/packages/bolt-toolkit/bolt.scss
+++ b/packages/bolt-toolkit/bolt.scss
@@ -38,7 +38,6 @@
 // @import '../06-components/components.article.refactor';
 
 
-
 /* ------------------------------------ *\
   Themes
 \* ------------------------------------ */
@@ -51,6 +50,9 @@
 @import '@bolt/utilities-all';
 
 
+// body {
+//   @include font-size(16px);
+// }
 //
 // @mixin test-color($name, $tone: 'initial', $type: null) {
 //   $color: map-get-deep($bolt-colors, $name, $tone);
