WIP: headline spacing

--- a/packages/bolt-toolkit-ui/components/components-headline/headline.twig
+++ b/packages/bolt-toolkit-ui/components/components-headline/headline.twig
@@ -1,10 +1,19 @@
-<div class="o-bolt-wrapper" style="max-width: 70ch">
+<div class="o-bolt-wrapper" style="max-width: 80ch">
   <h1 class="c-bolt-headline">
     <span class="c-bolt-headline__text">Default without Modifier</span>
   </h1>
   <p>
     Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere.
   </p>
+  <p class="c-bolt-headline c-bolt-headline--eyebrow">
+    <span class="c-bolt-headline__text">Eyebrow</span>
+  </p>
+  <h1 class="c-bolt-headline c-bolt-headline--xxxlarge">
+    <span class="c-bolt-headline__text">CRM Applications for Real-time Management</span>
+  </h1>
+  <h2 style="padding-bottom: 20em" class="c-bolt-subheadline c-bolt-subheadline--xlarge">
+    <span class="c-bolt-subheadline__text">Pega's AI powered CRM is transforming the way enterprises drive greater engagement the entire across customer journey.</span>
+  </h2>
   <h1 class="c-bolt-headline c-bolt-headline--xxxlarge">
     <span class="c-bolt-headline__text">XXXLarge</span>
   </h1>
@@ -46,17 +55,5 @@
   </h6>
   <p>
     Medium is the body (base) font size, therefore it is not a size for the headlines.
-  </p>
-  <p class="c-bolt-headline c-bolt-headline--eyebrow">
-    <span class="c-bolt-headline__text">Eyebrow</span>
-  </p>
-  <h1 class="c-bolt-headline c-bolt-headline--xxxlarge">
-    <span class="c-bolt-headline__text">XXXLarge Headline</span>
-  </h1>
-  <h2 class="c-bolt-subheadline c-bolt-subheadline--xxlarge">
-    <span class="c-bolt-subheadline__text">XXLarge Subheadline</span>
-  </h2>
-  <p>
-    Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere.
   </p>
 </div>
