--- a/packages/bolt-toolkit-ui/components/components-headline/_components.headline.scss
+++ b/packages/bolt-toolkit-ui/components/components-headline/_components.headline.scss
@@ -7,38 +7,43 @@
   @include bolt-font-family(heading);
 
   &:not([class*='c-bolt-headline--']) {
+    @include bolt-margin-bottom(xsmall);
     @include bolt-font-size(large);
   }
 
   &:not([class*='c-bolt-headline--eyebrow']) {
-    @include bolt-margin-bottom(xsmall);
     @include bolt-font-weight(bold);
   }
 }
 
 .c-bolt-headline--xxxlarge {
+  @include bolt-margin-bottom(small);
   @include bolt-font-size(xxxlarge);
 
   letter-spacing: -0.15rem;
 }
 
 .c-bolt-headline--xxlarge {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(xxlarge);
 
   letter-spacing: -0.1rem;
 }
 
 .c-bolt-headline--xlarge {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(xlarge);
 
   letter-spacing: -0.05rem;
 }
 
 .c-bolt-headline--large {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(large);
 }
 
 .c-bolt-headline--small {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(small);
 
   text-transform: uppercase;
@@ -46,6 +51,7 @@
 }
 
 .c-bolt-headline--xsmall {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(xsmall);
 
   letter-spacing: 0.05rem;
@@ -57,7 +63,7 @@
   @include bolt-font-weight(regular);
 
   text-transform: uppercase;
-  letter-spacing: 0.15rem;
+  letter-spacing: 0.1rem;
 }
 
 
