fix: renaming the New status color key to Blue based on design conversation last week

--- a/packages/bolt-toolkit-core/01-settings/settings-colors/_settings.colors.scss
+++ b/packages/bolt-toolkit-core/01-settings/settings-colors/_settings.colors.scss
@@ -15,6 +15,11 @@ $bolt-brand-colors: (
     light:  hsl(233, 33%, 40%),
     xlight: hsl(233, 100%, 89%)
   ),
+  blue: (
+    dark: hsl(201, 100%, 25%),
+    base: hsl(201, 100%, 35%),
+    light: hsl(201, 100%, 92%)
+  ),
   yellow: (
     xdark:  hsl(43, 100%, 20%),
     dark:   hsl(43, 82%, 50%),
@@ -53,11 +58,6 @@ $bolt-brand-colors: (
 
 
 $bolt-status-colors: (
-  new: (
-    dark: hsl(201, 100%, 25%),
-    base: hsl(201, 100%, 35%),
-    light: hsl(201, 100%, 92%)
-  ),
   success: (
     dark: hsl(121, 41%, 25%),
     base: hsl(121, 41%, 35%),
