--- a/packages/bolt-toolkit-core/02-tools/tools-all/_tools.all.scss
+++ b/packages/bolt-toolkit-core/02-tools/tools-all/_tools.all.scss
@@ -8,6 +8,13 @@
 @import '@bolt/tools-font-kerning';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-color-palette';
+@import '@bolt/tools-poly-fluid-sizing';
+@import '@bolt/tools-px-to-rem';
+@import '@bolt/tools-linear-interpolation';
+@import '@bolt/tools-list-remove';
+@import '@bolt/tools-list-sort';
+@import '@bolt/tools-map-sort';
+
 
 @mixin bolt-uppercase() {
   text-transform: uppercase;
