--- a/packages/bolt-toolkit-ui/components/components-headline/_components.headline.scss
+++ b/packages/bolt-toolkit-ui/components/components-headline/_components.headline.scss
@@ -1,44 +1,92 @@
 /* ------------------------------------ *\
    Headlines
 \* ------------------------------------ */
+/* stylelint-disable-next-line color-named */
+$bolt-test-color-secondary: blue; // TODO: needs to map to our palette
+$bolt-test-transition: ease-in-out 200ms;
 
+// Placeholder for colors.
+@mixin bolt-test-link-color {
+  &:link {
+    color: var(--bolt-test-color-secondary, $bolt-test-color-secondary);
+  }
+
+  &:visited {
+    color: var(--bolt-test-color-secondary, inherit);
+  }
+
+  &:hover {
+    color: var(--bolt-test-color-secondary, mix(white, $bolt-test-color-secondary, 35%));
+  }
+
+  &:active {
+    color: var(--bolt-test-color-secondary, $bolt-test-color-secondary);
+  }
+}
+
+// Placeholder for links
+
+a {
+  @include bolt-test-link-color;
+
+  transition: all $bolt-test-transition;
+}
+
+
+// Headline styles.
 
 .c-bolt-headline {
   @include bolt-font-family(heading);
 
+  display: block;
+  @supports (display: flex) {
+    display: flex;
+    align-items: center;
+  }
+
   &:not([class*='c-bolt-headline--']) {
+    @include bolt-margin-bottom(xsmall);
     @include bolt-font-size(large);
   }
 
   &:not([class*='c-bolt-headline--eyebrow']) {
-    @include bolt-margin-bottom(xsmall);
     @include bolt-font-weight(bold);
+  }
+
+  > * {
+    display: inline-flex;
+    align-self: baseline;
   }
 }
 
 .c-bolt-headline--xxxlarge {
+  @include bolt-margin-bottom(small);
   @include bolt-font-size(xxxlarge);
 
   letter-spacing: -0.15rem;
 }
 
 .c-bolt-headline--xxlarge {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(xxlarge);
 
   letter-spacing: -0.1rem;
 }
 
 .c-bolt-headline--xlarge {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(xlarge);
 
   letter-spacing: -0.05rem;
 }
 
 .c-bolt-headline--large {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(large);
 }
 
 .c-bolt-headline--small {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(small);
 
   text-transform: uppercase;
@@ -46,6 +94,7 @@
 }
 
 .c-bolt-headline--xsmall {
+  @include bolt-margin-bottom(xsmall);
   @include bolt-font-size(xsmall);
 
   letter-spacing: 0.05rem;
@@ -57,10 +106,53 @@
   @include bolt-font-weight(regular);
 
   text-transform: uppercase;
-  letter-spacing: 0.15rem;
+  letter-spacing: 0.1rem;
+}
+
+// Headline content
+
+.c-bolt-headline__text {
+  ~ .c-bolt-headline__icon {
+    @include bolt-margin-left(small);
+  }
+}
+
+.c-bolt-headline__icon {
+  width: 0.75em;
+  height: 0.75em;
+
+  svg {
+    width: 1em;
+    height: auto;
+    fill: currentColor;
+  }
+
+  ~ .c-bolt-headline__text {
+    @include bolt-margin-left(small);
+  }
+}
+
+.c-bolt-headline__line {
+  flex: 1 0 1rem;
+  align-self: center;
+  height: 1px;
+  border-width: 0;
+  border-style: none;
+  /* stylelint-disable-next-line scale-unlimited/declaration-strict-value */
+  background-color: currentColor;
+  opacity: 0.2;
+
+  &:first-child {
+    @include bolt-margin(0 small 0 0);
+  }
+
+  &:last-child {
+    @include bolt-margin(0 0 0 small);
+  }
 }
 
 
+// Subheadline styles.
 
 .c-bolt-subheadline {
   @include bolt-margin-bottom(xsmall);
